fixing overflowing inputs

--- a/client/src/css/utility/home.css
+++ b/client/src/css/utility/home.css
@@ -96,7 +96,8 @@ html, body{
     padding: 0.5rem;
     border-radius: 0.2rem;
      max-height: 2rem;
-     min-width: 88%;
+     max-width: 38.8rem;
+     width: 76vw;
     text-align: center;
     border-radius: 0;
     font-size: 1.3em;
@@ -126,7 +127,8 @@ html, body{
     max-height: 2rem;
     text-align: center;
     border-radius: 0;
-    min-width: 88%;
+    max-width: 38.8rem;
+    width: 76vw;
     font-size: 1.3em;
     font-weight: 400;
     background: hsla(215, 20%, 98%, 1);
